cli/tests/inline_js_source_map_2.js.out
error: Uncaught Error: Hello world!
throw new Error("Hello world!");
      ^
    at http://localhost:4545/cli/tests/inline_js_source_map_2.ts:6:7
